#741308 by stephthegeek : Fixed Login block text fields uneven widths in IE6.

--- a/css/ie.css
+++ b/css/ie.css
@@ -3,3 +3,6 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#f7f7f7,endColorstr=#f0f0f0);
   zoom: 1;
 }
+input.form-text {
+  font-family: sans-serif;
+}
